add forced method to set task status
